1200 style done and fixed accordion to only be on mobile

--- a/styling/sass/_body.scss
+++ b/styling/sass/_body.scss
@@ -1,6 +1,12 @@
 @use "./variables" as *;
 @use "./mixins" as *;
 
+.about{
+    h2{
+        color:$black;
+    }
+}
+
 .social-links{
     display:grid;
     grid-template-columns:repeat(3, 1fr);
