--- a/styling/sass/_tablet-media.scss
+++ b/styling/sass/_tablet-media.scss
@@ -92,7 +92,6 @@
         .fa-github{
             background-color:$black;
             border:2px solid $black;
-            border-radius:50%;
         }
     }
 }
