--- a/styling/sass/_variables.scss
+++ b/styling/sass/_variables.scss
@@ -15,3 +15,4 @@ $logo-font:'Oswald', sans-serif;
 $font-family:'Be Vietnam Pro', sans-serif;
 // SIZING
 $business-card:calc(100vw / 1.618);
+$desktop-card:calc(30vw / 1.618);
