--- a/styling/styles.css
+++ b/styling/styles.css
@@ -395,6 +395,10 @@ h1 .ristan {
   left: 20px;
 }
 
+.about h2 {
+  color: #000000;
+}
+
 .social-links {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -705,7 +709,132 @@ hr {
   .social-links .fa-github {
     background-color: #000000;
     border: 2px solid #000000;
-    border-radius: 50%;
+  }
+}
+@media (min-width: 1200px) {
+  .desk-hidden {
+    display: none;
+  }
+  .desk-header {
+    margin: 0;
+    background: rgb(30, 59, 112);
+    background: radial-gradient(circle, rgb(30, 59, 112) 0%, rgb(41, 83, 155) 50%, rgb(30, 59, 112) 100%);
+    border-radius: 25px;
+    height: 50vh;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .desk-header h2 {
+    grid-row: 3;
+    grid-column: span 2;
+    font-size: 3rem;
+    margin-bottom: 0;
+  }
+  .desk-header h3 {
+    grid-row: 4;
+    grid-column: span 2;
+    font-size: 2rem;
+    margin-top: 0;
+  }
+  .home {
+    width: 30vw;
+    height: 18.5414091471vw;
+    grid-column: span 2;
+    grid-row: 4;
+    grid-column: 4;
+  }
+  h1 .T {
+    font-size: 7rem;
+    bottom: -4.5%;
+  }
+  h1 .ristan {
+    font-size: 3rem;
+  }
+  .ristan:hover:after {
+    left: 20px;
+  }
+  .ristan:focus:after {
+    left: 20px;
+  }
+  .about {
+    display: grid;
+    grid-template-columns: 1fr 3fr 2fr;
+    grid-template-rows: 1fr 3fr;
+  }
+  .about h2 {
+    grid-column: 2;
+  }
+  .about p {
+    grid-column: 2;
+    grid-row: 2;
+  }
+  .about .mobile-hidden {
+    grid-column: 1;
+    grid-row: span 2;
+  }
+  .about .social-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .tech-icons, .tech-info {
+    max-height: 0;
+  }
+  .tech, .tech-text {
+    width: 30vw;
+    height: 18.5414091471vw;
+    transform: translate(217%, -100%);
+  }
+  .tech li img, .tech-text li img {
+    width: 2rem;
+  }
+  .tech i, .tech-text i {
+    font-size: 2rem;
+  }
+  .tech ul, .tech-text ul {
+    font-size: 1rem;
+    gap: 0.5rem;
+  }
+  .projects {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr;
+    gap: 3rem;
+    margin: 5% auto;
+  }
+  .projects h2, .projects .project-card {
+    width: 30vw;
+    height: 18.5414091471vw;
+    margin: auto auto;
+  }
+  .projects h2 {
+    font-size: 2rem;
+    grid-column: 2;
+    margin-top: 0;
+  }
+  .project-slider {
+    grid-row: 2;
+    grid-column: 2;
+    position: relative;
+    overflow: hidden;
+  }
+  .slide-left {
+    grid-column: 1;
+    grid-row: 2;
+  }
+  .slide-right {
+    grid-column: 3;
+    grid-row: 2;
+  }
+  .contact {
+    margin-top: 0;
+  }
+  .contact h2 {
+    width: 30vw;
+    height: 18.5414091471vw;
+    transform: translateX(118%);
   }
 }
 html {
